--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # compiled output
 /dist
 /node_modules
+package-lock.json
+yarn-lock.json
+.env
 
 # Logs
 logs
@@ -33,3 +36,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.idea
