--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+    "useTabs": true,
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": false,
+    "bracketSpacing": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "arrowParens": "avoid"
 }
