--- a/.env.dev
+++ b/.env.dev
@@ -5,5 +5,21 @@ NODE_ENV=development
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASS=1
-MYSQL_DB=base_nest
+MYSQL_PASSWORD=1
+MYSQL_DATABASE=base_nest
+
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USER=root
+REDIS_PASSWORD=1
+
+# Seperate by ",", ex: host1.com, host2.com
+CORS_ORIGIN=localhost:3000
+
+#JWT
+AUTH_SECRET=9TpSQ2vJTNLAb7fPgRi6wUZk8mdHgfFt
+ADMIN_AUTH_SECRET=8whXCjRF28Wcj0fVCzPe5tXsbZhZwuTE
+
+#Static path
+PUBLIC_FILE_UPLOAD_PATH=/uploads
