--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
         "prestart": "npm run lint && npm run format",
+        "prestart:dev": "npm run lint && npm run format",
         "start": "nest start",
-        "start:dev": "npm run prestart && nest start --watch",
+        "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,13 +20,23 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d dist/configs/databases/mySQL/datasource.config.js",
+        "migrate:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create ./src/databases/migrations/$npm_config_name",
+        "migrate:up": "npm run typeorm migration:run",
+        "migrate:down": "npm run typeorm migration:revert",
+        "schema:sync": "npm run typeorm -- schema:sync",
+        "typeorm-extension": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js -d dist/configs/databases/mySQL/datasource.config.js",
+        "database:create": "npm run typeorm-extension db:create",
+        "database:drop": "npm run typeorm-extension db:drop",
+        "seed:run": "npm run typeorm-extension seed"
     },
     "dependencies": {
         "@nestjs/common": "^9.0.0",
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/jwt": "^10.0.2",
+        "@nestjs/passport": "^9.0.3",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/schedule": "^2.2.0",
         "@nestjs/serve-static": "^3.0.1",
@@ -61,7 +72,7 @@
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "jest": "29.3.1",
         "prettier": "2.8.4",
         "source-map-support": "^0.5.20",
