--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "moment-timezone": "^0.5.41",
+        "morgan": "^1.10.0",
         "mysql2": "^3.2.0",
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.1.13",
