--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,10 @@ services:
       - ./docker/init.sql:/docker-entrypoint-initdb.d/init-database.sql
       - ./docker/data:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: localhost
-      MYSQL_ROOT_PASSWORD: 1
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 1
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-base_nest}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD:-gsignal}
+      MYSQL_USER: ${MYSQL_USER:-root}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-gsignal}
     command: --default-authentication-plugin=mysql_native_password
 networks:
   mysql:
